--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 #!/bin/bash
-
 echo "Enter the project name: "; read name;
 mkdir $name;
+cp .gitignore $name;
 touch $name/build.gradle;
 mkdir $name/src;
 mkdir $name/src/main;
